@@ -7,6 +7,9 @@ This file contains OFSwitch13 release notes (most recent releases first).
 Release 3.X.X (XXXXXXXXXXXX)
 ============================
 
+- Including a new counter on the OFSwitch13StatsCalculator to measure the
+  pipeline load in terms of packets.
+
 
 Release 3.1.0 (May 29, 2017)
 ============================
